CI|CD/jenkins/jenkins-minikube/gateway-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: jenkins-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "192.168.49.2"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: jenkins-vs
spec:
  hosts:
  - "*"
  gateways:
  - jenkins-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: jenkins
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: external-svc-https
spec:
  hosts:
  - sg.mirror.servanamanaged.com
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: TLS
  resolution: DNS
